# lwsip

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  COMPLETION_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  LWS_AGENT_FIXES.md  MEDIA_SESSION_INTEGRATION.md  Makefile  QUICK_START.md  README.md  RECORDING_FEATURE_IMPLEMENTATION.md  REFACTORING_PLAN.md  SUMMARY.md  TESTING_PLAN.md  TRANSPORT_DESIGN.md  add_submodules.sh  arch-v3.0-analysis.md  build.sh  clean.sh
3rds/: README.md
build_osal/: Makefile
cmd/: CMakeLists.txt  README.md  lwsip-cli.c  lwsip_cli.c  lwsip_media_test.c
docs/: README_zh.md  arch-v3.0.md  ice.md  libice.arch.md  librtp.arch.md  libsip.arch.md  lws_dev_implementation_plan.md  media_transport_design.md
include/: list.h  lws_agent.h  lws_client.h  lws_defs.h  lws_dev.h  lws_err.h  lws_error.h  lws_ice.h  lws_media.h  lws_payload.h  lws_rtp.h  lws_sess.h  lws_session.h  lws_timer.h  lws_trans.h  lws_transport.h  lws_types.h  lws_uac.h  lws_uas.h  lwsip.h
osal/: CHANGES.md  CMakeLists.txt  Makefile  OPTIMIZATION.md  README.md
osal/examples/: mutex_stack_example  mutex_stack_example.c  thread_example  thread_example.c
osal/include/: lws_log.h  lws_mem.h  lws_mutex.h  lws_osal.h  lws_thread.h
osal/src/linux/: lws_mem.c  lws_mutex.c  lws_osal.c
osal/src/macos/: lws_mem.c  lws_osal.c  lws_thread.c
scripts/: README.md  README_lwsip_scripts.md  call_remote.sh  callee.sh  caller.sh  lwsip_call.sh  lwsip_caller.sh  test_lwsip_call.sh  wait_incoming.sh
scripts/freeswitch/: README.md  deploy.sh  deploy_remote.sh  docker-compose.yml  install.sh  remote_control.sh  start.sh  stop.sh  test_connection.sh  uninstall.sh
scripts/freeswitch/config/directory/: 1000.xml  1001.xml  1002.xml  1003.xml  198.19.249.149.xml
src/: lws_agent.c  lws_agent.c.backup  lws_agent.c.backup2  lws_auth.c  lws_auth.h  lws_client.c  lws_dev.c  lws_dev_file.c  lws_dev_intl.h  lws_dev_linux.c  lws_dev_macos.c  lws_dev_stub.c  lws_intl.h  lws_sess.c  lws_session.c  lws_sip_timer.c  lws_timer.c  lws_timer.h  lws_trans.c  lws_trans_mqtt.c  lws_trans_udp.c  lws_transport_mqtt.c  lws_transport_tcp.c  lws_uac.c  lws_uas.c  lwsip.c
tests/: CMakeLists.txt  Makefile  TEST_ARCHITECTURE_BRIEF.md  callee  callee.c  caller  caller.c  lws_agent_test_main.c  lws_sess_stub.c  lws_trans_test  lws_trans_test.c  lwsip_agent_stub.c  lwsip_agent_test.c  lwsip_sess_stub.c  lwsip_sess_test.c  sess_stub.c  sip_fake  sip_fake.c  test_call.sh  test_sip_fake_modes.sh  test_sip_fake_scenarios.sh  trans_stub.c  trans_stub.h
tests/sip/: README.md
v2.0/include/: lws_agent.h  lws_error.h  lws_session.h  lws_transport.h  lws_types.h
v2.0/src/: lws_agent.c  lws_error.c  lws_ice.c  lws_intl.h  lws_media.c  lws_payload.c  lws_session.c  lws_sip_timer.c  lws_transport_mqtt.c  lws_transport_socket.c
v2.0/tests/: CMakeLists.txt  README.md
v2.0/tests/mocks/: mock_sip_agent.c  mock_sip_agent.h
v2.0/tests/unit/: test_transport_tcp.c
